updated project html rintime to import event stuff

--- a/Sirpple/compiler/runtime/project.html
+++ b/Sirpple/compiler/runtime/project.html
@@ -13,6 +13,9 @@
         goog.require('lime.Circle');
         goog.require('lime.Sprite');
         goog.require('lime.Label');
+        goog.require('goog.events.Event');
+        goog.require('goog.events.EventTarget');
+
     </script>
     <script type="text/javascript" src="{% autoescape off %}{{project_js_url}}{% endautoescape %}"></script>
 </head>
